--- a/app/src/main/res/drawable/recycler_line_divider.xml
+++ b/app/src/main/res/drawable/recycler_line_divider.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    android:opticalInsetRight="20dp"
-    android:opticalInsetLeft="57dp">
-
-    <size android:height="1dp" />
-    <solid android:color="?attr/line_divider" />
+    android:shape="rectangle">
+    <size android:height="1dp"/>
+    <solid android:color="?attr/line_divider"/>
 </shape>
