--- a/app/src/main/res/drawable/ic_exo_error_background.xml
+++ b/app/src/main/res/drawable/ic_exo_error_background.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/dark_grey"/>
+            <solid android:color="@color/black_40"/>
             <corners android:radius="20dip" />
         </shape>
     </item>
