--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -1,5 +1,6 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.google.android.exoplayer2.ui.AspectRatioFrameLayout android:id="@id/exo_content_frame"
+    <com.google.android.exoplayer2.ui.AspectRatioFrameLayout
+        android:id="@id/exo_content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center">
@@ -25,11 +26,12 @@
             android:layout_gravity="center"
             android:background="@drawable/ic_exo_error_background"
             android:gravity="center"
-            android:padding="16dp"
+            android:paddingHorizontal="14dp"
+            android:paddingVertical="8dp"
             android:fontFamily="@font/roboto"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="@color/white"
-            android:text="@string/error_massage" />
+            android:text="@string/exo_error_massage" />
 
     </com.google.android.exoplayer2.ui.AspectRatioFrameLayout>
 
