--- a/app/src/main/res/layout/fragment_exo_player.xml
+++ b/app/src/main/res/layout/fragment_exo_player.xml
@@ -11,13 +11,13 @@
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/player_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:show_buffering="always"
-        app:controller_layout_id="@layout/exoplayer_control_view" />
+        app:controller_layout_id="@layout/exo_player_control_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
