--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="light_black">#171717</color>
+    <color name="black_40">#66000000</color>
     <color name="black_60">#99000000</color>
 
     <color name="dark_grey">#2B2B2B</color>
