--- a/app/src/main/res/layout/recycler_media_item.xml
+++ b/app/src/main/res/layout/recycler_media_item.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/title_media"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
+    android:paddingVertical="16dp"
     android:gravity="center_vertical"
     android:fontFamily="@font/roboto"
-    android:textSize="14sp"
     android:textColor="?attr/text_primary_color"
     android:drawablePadding="16dp"
     app:drawableStartCompat="@drawable/ic_media_file"
