--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -104,4 +104,16 @@
         app:scrubber_color="@color/white"
         app:unplayed_color="@color/white_20" />
 
+    <ImageButton
+        android:id="@+id/picture_in_picture"
+        android:contentDescription="@string/exo_picture_in_picture_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="15dp"
+        android:background="@null"
+        android:src="@drawable/ic_exo_picture_in_picture"
+        app:layout_constraintBottom_toTopOf="@+id/exo_progress"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
