--- a/app/src/main/res/layout/fragment_exo_player.xml
+++ b/app/src/main/res/layout/fragment_exo_player.xml
@@ -9,7 +9,7 @@
     android:background="@color/black"
     tools:context=".ui.fragment.ExoPlayerFragment">
 
-    <com.google.android.exoplayer2.ui.PlayerView
+    <com.example.mymediaplayer.ui.player.DoubleTapPlayerView
         android:id="@+id/player_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,6 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:show_buffering="always"
-        app:controller_layout_id="@layout/exo_player_control_view" />
+        app:controller_layout_id="@layout/exo_player_control_view"
+        app:double_tap_controller_id="@layout/exo_double_tap_control_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
