--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -11,4 +11,39 @@
 
     <!-- recycler -->
     <attr name="line_divider" format="color"/>
+
+    <attr name="animationDuration" format="integer"/>
+
+    <item name="exo_double_tap_control" type="id" />
+    <item name="semicircle_ripple" type="id" />
+    <item name="text_second" type="id" />
+    <item name="triangle_rewind" type="id" />
+
+    <declare-styleable name="DoubleTapPlayerView">
+        <attr name="double_tap_controller_id" format="reference" />
+    </declare-styleable>
+
+    <declare-styleable name="DoubleTapControlView">
+        <attr name="rewindTime" format="integer"/>
+        <attr name="tapDelay" format="integer"/>
+    </declare-styleable>
+
+    <declare-styleable name="SemicircleRippleView">
+        <attr name="semicircleColor" format="color"/>
+        <attr name="semicircleArcSize" format="dimension"/>
+        <attr name="rippleColor" format="color"/>
+        <attr name="animationDuration"/>
+    </declare-styleable>
+
+    <declare-styleable name="TextSecondView">
+        <attr name="textSize" format="dimension"/>
+        <attr name="textColor" format="color"/>
+        <attr name="android:fontFamily" format="string"/>
+    </declare-styleable>
+
+    <declare-styleable name="TrianglesRewindView">
+        <attr name="triangleColor" format="color"/>
+        <attr name="sideTriangle" format="dimension"/>
+        <attr name="animationDuration"/>
+    </declare-styleable>
 </resources>
