--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
 
     <color name="dark_grey">#2B2B2B</color>
     <color name="gray_55">#8CDCDCDC</color>
+    <color name="gray_30">#4D656565</color>
+    <color name="gray_20">#33676767</color>
 
     <color name="white_20">#33FFFFFF</color>
     <color name="white_85">#D8FFFFFF</color>
