--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,16 +4,16 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/black</item>
 
-        <!-- fragment -->
+        <!-- Fragment -->
         <item name="fragment_background">@color/light_black</item>
 
-        <!-- text -->
+        <!-- Text -->
         <item name="text_primary_color">@color/white_85</item>
 
-        <!-- image -->
+        <!-- Image -->
         <item name="image_tint">@color/white_85</item>>
 
-        <!-- recycler -->
+        <!-- Recycler -->
         <item name="line_divider">@color/dark_grey</item>
     </style>
 </resources>
