--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorAccent">@color/black</item>
 
         <!-- Fragment -->
-        <item name="fragment_background">@color/light_black</item>
+        <item name="fragment_background">@color/dark_grey</item>
 
         <!-- Text -->
         <item name="text_primary_color">@color/white_85</item>
@@ -14,6 +14,9 @@
         <item name="image_tint">@color/white_85</item>>
 
         <!-- Recycler -->
-        <item name="line_divider">@color/dark_grey</item>
+        <item name="line_divider">@color/gray_30</item>
+
+        <!-- Quality dialog -->
+        <item name="quality_mark_color">@color/white_85</item>
     </style>
 </resources>
