View creation logic and track selection logic are separated

--- a/app/src/main/res/layout/exo_selectior_dialog.xml
+++ b/app/src/main/res/layout/exo_selectior_dialog.xml
@@ -8,7 +8,7 @@
     android:paddingEnd="25dp" >
 
 <LinearLayout
-    android:id="@+id/quality_view_group"
+    android:id="@+id/selector_view_group"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>
